feat(pokedex): move sql file in database folder, update Makefile

--- a/pokedex/Makefile
+++ b/pokedex/Makefile
@@ -1,6 +1,10 @@
-db.generate:
-	sqlc generate
-graphql.generate:
-	go run github.com/99designs/gqlgen generate
 air:
 	air -c .air.toml
+
+db.generate:
+	sqlc generate
+db.migrate:
+	sqlite3 pokedex.db < database/schema.sql
+
+graphql.generate:
+	go run github.com/99designs/gqlgen generate
