--- a/pokedex-container/sqlc.yaml
+++ b/pokedex-container/sqlc.yaml
@@ -1,9 +1,10 @@
 version: "2"
 sql:
-  - engine: "sqlite"
+  - engine: "postgresql"
     queries: "database/query.sql"
     schema: "database/schema.sql"
     gen:
       go:
         package: "database"
         out: "database"
+        sql_package: "pgx/v5"
